turning into pipeline

--- a/data_processing/01_data_cleaning.ipynb
+++ b/data_processing/01_data_cleaning.ipynb
@@ -156,15 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-25-6fd39ea7e187>, line 35)",
+     "evalue": "unexpected EOF while parsing (<ipython-input-26-63511dd52195>, line 36)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-6fd39ea7e187>\"\u001b[0;36m, line \u001b[0;32m35\u001b[0m\n\u001b[0;31m    parent_node_id = child_node_id\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-63511dd52195>\"\u001b[0;36m, line \u001b[0;32m36\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
