checking for missing data

--- a/hackathon/profundo/data/branches_EDA.ipynb
+++ b/hackathon/profundo/data/branches_EDA.ipynb
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "61228 SWC files found\n"
      ]
     }
    ],
@@ -46,13 +46,16 @@
     "# get human trajectories\n",
     "fnames = []\n",
     "abs_paths = []\n",
-    "for root, dirs, fnames_ in os.walk(\"../data/human_splitted/\"):\n",
+    "for root, dirs, fnames_ in os.walk(\"../data/03_human_branches_splitted/\"):\n",
     "    fnames.extend(fnames_)\n",
     "    for f in fnames_:\n",
     "        relpath = os.path.join(root, f)\n",
     "        abs_path = os.path.abspath(relpath)\n",
     "        abs_paths.append(abs_path)\n",
-    "print(fnames)"
+    "\n",
+    "if len(fnames) == 0:\n",
+    "    raise Exception(\"No SWC files found. Please run data generating scripts from data_processing directory\")\n",
+    "print(len(fnames), \"SWC files found\")"
    ]
   },
   {
