randomly sub-sampling branches into identical volumes

--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -14,74 +14,77 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f /home/shit/bin/allen/vaa3d_tools/hackathon/profundo/data/03_human_branches_splitted/038_06092018.ano.swc_root2270433_child2270432.swc\n",
-      "[[2270433.      21322.889   11924.667    5228.753]\n",
-      " [2270432.      21322.297   11924.667    5228.605]\n",
-      " [2270431.      21322.1     11923.63     5228.556]\n",
-      " [2270430.      21322.      11920.223    5228.309]\n",
-      " [2270429.      21321.334   11914.667    5226.531]\n",
-      " [2270428.      21316.666   11909.556    5226.309]\n",
-      " [2270427.      21314.666   11905.333    5224.531]\n",
-      " [2270426.      21312.666   11901.333    5224.531]\n",
-      " [2270425.      21311.334   11894.667    5224.531]\n",
-      " [2270424.      21310.      11891.333    5223.197]\n",
-      " [2270423.      21310.223   11884.223    5222.53 ]\n",
-      " [2270422.      21312.      11878.223    5222.308]\n",
-      " [2270421.      21312.      11873.777    5220.752]\n",
-      " [2270420.      21312.      11858.       5220.53 ]\n",
-      " [2270419.      21310.223   11852.       5220.308]\n",
-      " [2270418.      21309.777   11846.223    5218.53 ]\n",
-      " [2270417.      21308.223   11841.777    5218.53 ]\n",
-      " [2270416.      21308.      11838.223    5218.308]\n",
-      " [2270415.      21306.666   11835.111    5216.752]\n",
-      " [2270414.      21306.      11832.       5216.53 ]\n",
-      " [2270413.      21306.      11825.777    5214.752]\n",
-      " [2270412.      21306.      11818.223    5214.308]\n",
-      " [2270411.      21306.      11812.       5212.529]]\n"
-     ]
-    }
-   ],
    "source": [
-    "from swc_io import get_fnames_and_abspath_from_dir, swc_to_nparray\n",
+    "from swc_io import get_fnames_and_abspath_from_dir, swc_to_dframe\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "TARGET_DIM_SIZE = 25  # size in pixels for all x,y,z dims\n",
-    "min_swc_dim_span = TARGET_DIM_SIZE+2  # some padding to make things easy\n",
+    "half_size = TARGET_DIM_SIZE / 2\n",
+    "min_swc_dim_span = TARGET_DIM_SIZE + 5  # some leeway to make things easy\n",
+    "padding = min_swc_dim_span//2\n",
     "\n",
     "BRANCHES_DIR = \"../data/03_human_branches_splitted\"\n",
     "\n",
     "fnames, abs_paths = get_fnames_and_abspath_from_dir(BRANCHES_DIR)\n",
-    "for file in abs_paths[:1]:  # TODO: get rid of slice\n",
-    "    print(\"f\", file)\n",
-    "    nodes = swc_to_nparray(file)\n",
-    "    print(nodes)\n"
+    "good_swc_paths = []\n",
+    "good_swcs = {}\n",
+    "for file in abs_paths:\n",
+    "    nodes = swc_to_dframe(file)\n",
+    "    assert(isinstance(nodes, pd.DataFrame))\n",
+    "    \n",
+    "    x_span = nodes.x.max() - nodes.x.min()\n",
+    "    y_span = nodes.y.max() - nodes.y.min()\n",
+    "    z_span = nodes.z.max() - nodes.z.min()\n",
+    "    \n",
+    "    dim_size_good = np.array([x_span, y_span, z_span]) > min_swc_dim_span\n",
+    "    if np.all(dim_size_good):  # our SWC meets our criteria\n",
+    "        \n",
+    "        # TODO: resample SWCs here\n",
+    "        # use resample_swc script\n",
+    "        \n",
+    "        good_swc_paths.append(file)\n",
+    "        good_swcs[file] = nodes\n",
+    "        good_nodes = nodes.loc[(nodes.x.between(nodes.x.min()+padding,nodes.x.max()+padding)) &\n",
+    "                              (nodes.y.between(nodes.y.min()+padding,nodes.y.max()+padding)) &\n",
+    "                              (nodes.z.between(nodes.z.min()+padding,nodes.z.max()+padding))]\n",
+    "        if len(good_nodes) > 0:\n",
+    "            # grab all nodes in neighborhood around sampled node\n",
+    "            center_node = good_nodes.sample(n=1)\n",
+    "            #print(center_node.x.item())\n",
+    "            sample = nodes.loc[(nodes.x.between(center_node.x.item()-half_size, center_node.x.item()+half_size)) &\n",
+    "                              (nodes.y.between(center_node.y.item()-half_size, center_node.y.item()+half_size)) &\n",
+    "                              (nodes.z.between(center_node.z.item()-half_size, center_node.z.item()+half_size))]\n",
+    "        #print(nodes.size, good_nodes.size)\n",
+    "        # TODO : if no good nodes, pass\n",
+    "    else:\n",
+    "        #print(\"dims too small \", x_span, y_span, z_span) \n",
+    "        pass\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we want to only randomly sample from nodes sufficiently far away from the boundary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "61228\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(len(fnames))"
+    "# sample from the SWC\n",
+    "# first, we won't pick nodes too close to the edges\n",
+    "#filtered_nodes = np.where()\n",
+    "#print(\"dim sizes are good\")\n",
+    "\n",
+    "for swc_file in good_swc_paths[:1]: # TODO remove slice\n",
+    "    nodes = good_swcs[swc_file]\n",
+    "    good_nodes = "
    ]
   },
   {
