making space in pipeline for resampling

--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -6,12 +6,30 @@
    "source": [
     "We want the neural net to be given the same size volume at each episode.\n",
     "\n",
-    "First, we check to see if the branch is at least as big as the target volume before we sample nodes from it."
+    "\n",
+    "\n",
+    "First, we upsample the SWC files to make sure to get rid of huge inter-node distances, which can cause problems when trying to render a volume."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we check to see if the branch is at least as big as the target volume before we sample nodes from it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
