documented Yang's instructions

--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -8,7 +8,13 @@
     "\n",
     "\n",
     "\n",
-    "First, we upsample the SWC files to make sure to get rid of huge inter-node distances, which can cause problems when trying to render a volume."
+    "First, we upsample the SWC files to make sure to get rid of huge inter-node distances, which can cause problems when trying to render a volume.\n",
+    "\n",
+    "Before running the `resample_swc` script, this are the steps that Yang took:\n",
+    "\n",
+    "He went to 'v3d_tools/release_plugins/v3d_plugins/resample_swc' and ran `qmake` and then `make`. He made some symbolic links to the main `v3d_external` folder.\n",
+    "\n",
+    "Then, to run the `resample_swc` script, simply run `/path/to/v3d_external/bin/vaa3d -x resample_swc -f resample_swc -i <input_file> -o <output_file>`."
    ]
   },
   {
@@ -17,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO"
+    "# TODO https://stackoverflow.com/a/4376421/4212158"
    ]
   },
   {
