open resample_swc

--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -14,7 +14,24 @@
     "\n",
     "He went to 'v3d_tools/release_plugins/v3d_plugins/resample_swc' and ran `qmake` and then `make`. He made some symbolic links to the main `v3d_external` folder.\n",
     "\n",
-    "Then, to run the `resample_swc` script, simply run `/path/to/v3d_external/bin/vaa3d -x resample_swc -f resample_swc -i <input_file> -o <output_file>`."
+    "Then, to run the `resample_swc` script, simply run `/path/to/v3d_external/bin/vaa3d -x resample_swc -f resample_swc -i <input_file> -o <output_file>`.\n",
+    "\n",
+    "We need to get the resample_swc file directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import filedialog\n",
+    "\n",
+    "root = tk.Tk()\n",
+    "root.withdraw()\n",
+    "\n",
+    "file_path = filedialog.askopenfilename(title='Select compiled resample_swc binary')"
    ]
   },
   {
@@ -23,7 +40,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO https://stackoverflow.com/a/4376421/4212158"
+    "# TODO https://stackoverflow.com/a/4376421/4212158\n",
+    "\n",
+    "from subprocess import call\n",
+    "call([\"./spa\", \"args\", \"to\", \"spa\"])"
    ]
   },
   {
@@ -135,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
