--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,19 +31,22 @@
     "root = tk.Tk()\n",
     "root.withdraw()\n",
     "\n",
-    "file_path = filedialog.askopenfilename(title='Select compiled resample_swc binary')"
+    "vaa3d_path = filedialog.askopenfilename(title='Select compiled Vaa3d binary')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO https://stackoverflow.com/a/4376421/4212158\n",
+    "# https://stackoverflow.com/a/4376421/4212158\n",
     "\n",
     "from subprocess import call\n",
-    "call([\"./spa\", \"args\", \"to\", \"spa\"])"
+    "\n",
+    "def resample_swc(input_fpath, output_fpath):\n",
+    "    v3d_plugin_name = \"resample_swc\"\n",
+    "    call([vaa3d_path, \"-x\", v3d_plugin_name, \"-f\", v3d_plugin_name, \"-i\", input_fpath, \"-o\", output_fpath])"
    ]
   },
   {
@@ -59,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from swc_io import get_fnames_and_abspath_from_dir, swc_to_dframe\n",
+    "from swc_io import get_fnames_and_abspath_from_dir, swc_to_dframe, resample_swc\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -69,12 +72,13 @@
     "padding = min_swc_dim_span//2\n",
     "\n",
     "BRANCHES_DIR = \"../data/03_human_branches_splitted\"\n",
+    "UPSAMPLED_BRANCHES_DIR = \"../data/04_human_branches_filtered_upsampled\"\n",
     "\n",
     "fnames, abs_paths = get_fnames_and_abspath_from_dir(BRANCHES_DIR)\n",
     "good_swc_paths = []\n",
     "good_swcs = {}\n",
-    "for file in abs_paths:\n",
-    "    nodes = swc_to_dframe(file)\n",
+    "for i len(fnames):\n",
+    "    nodes = swc_to_dframe(abs_paths[i])\n",
     "    assert(isinstance(nodes, pd.DataFrame))\n",
     "    \n",
     "    x_span = nodes.x.max() - nodes.x.min()\n",
@@ -84,23 +88,29 @@
     "    dim_size_good = np.array([x_span, y_span, z_span]) > min_swc_dim_span\n",
     "    if np.all(dim_size_good):  # our SWC meets our criteria\n",
     "        \n",
-    "        # TODO: resample SWCs here\n",
-    "        # use resample_swc script\n",
+    "        # upsample the SWC\n",
+    "        upsampled_fpath = resample_swc(fnames[i], abs_paths[i])\n",
+    "        # replace nodes with our upsampled nodes\n",
+    "        nodes = swc_to_dframe(upsampled_fpath)\n",
     "        \n",
-    "        good_swc_paths.append(file)\n",
-    "        good_swcs[file] = nodes\n",
-    "        good_nodes = nodes.loc[(nodes.x.between(nodes.x.min()+padding,nodes.x.max()+padding)) &\n",
+    "        # keep list TODO necessary?\n",
+    "        good_swc_paths.append(abs_paths[i])\n",
+    "        good_swcs[abs_paths[i]] = nodes\n",
+    "        \n",
+    "        # find nodes far enough away from bounds\n",
+    "        central_nodes = nodes.loc[(nodes.x.between(nodes.x.min()+padding,nodes.x.max()+padding)) &\n",
     "                              (nodes.y.between(nodes.y.min()+padding,nodes.y.max()+padding)) &\n",
     "                              (nodes.z.between(nodes.z.min()+padding,nodes.z.max()+padding))]\n",
-    "        if len(good_nodes) > 0:\n",
-    "            # grab all nodes in neighborhood around sampled node\n",
+    "        \n",
+    "        if len(central_nodes) > 0:\n",
+    "            # sample a central node\n",
     "            center_node = good_nodes.sample(n=1)\n",
-    "            #print(center_node.x.item())\n",
+    "            # grab all nodes in neighborhood of center_node\n",
     "            sample = nodes.loc[(nodes.x.between(center_node.x.item()-half_size, center_node.x.item()+half_size)) &\n",
     "                              (nodes.y.between(center_node.y.item()-half_size, center_node.y.item()+half_size)) &\n",
     "                              (nodes.z.between(center_node.z.item()-half_size, center_node.z.item()+half_size))]\n",
-    "        #print(nodes.size, good_nodes.size)\n",
-    "        # TODO : if no good nodes, pass\n",
+    "            \n",
+    "            # save sample to swc\n",
     "    else:\n",
     "        #print(\"dims too small \", x_span, y_span, z_span) \n",
     "        pass\n",
