saving samples to swc

--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -24,30 +24,14 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import tkinter as tk\n",
-    "from tkinter import filedialog\n",
-    "\n",
-    "root = tk.Tk()\n",
-    "root.withdraw()\n",
-    "\n",
-    "vaa3d_path = filedialog.askopenfilename(title='Select compiled Vaa3d binary')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# https://stackoverflow.com/a/4376421/4212158\n",
-    "\n",
-    "from subprocess import call\n",
-    "\n",
-    "def resample_swc(input_fpath, output_fpath):\n",
-    "    v3d_plugin_name = \"resample_swc\"\n",
-    "    call([vaa3d_path, \"-x\", v3d_plugin_name, \"-f\", v3d_plugin_name, \"-i\", input_fpath, \"-o\", output_fpath])"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -62,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from swc_io import get_fnames_and_abspath_from_dir, swc_to_dframe, resample_swc\n",
+    "from swc_io import get_fnames_and_abspath_from_dir, swc_to_dframe, resample_swc, dframe_to_swc\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -89,7 +73,7 @@
     "    if np.all(dim_size_good):  # our SWC meets our criteria\n",
     "        \n",
     "        # upsample the SWC\n",
-    "        upsampled_fpath = resample_swc(fnames[i], abs_paths[i])\n",
+    "        upsampled_fpath = resample_swc(fnames, abs_paths[i])\n",
     "        # replace nodes with our upsampled nodes\n",
     "        nodes = swc_to_dframe(upsampled_fpath)\n",
     "        \n",
@@ -111,6 +95,7 @@
     "                              (nodes.z.between(center_node.z.item()-half_size, center_node.z.item()+half_size))]\n",
     "            \n",
     "            # save sample to swc\n",
+    "            dframe_to_swc(fnames[i], sample)\n",
     "    else:\n",
     "        #print(\"dims too small \", x_span, y_span, z_span) \n",
     "        pass\n",
