trying to get upsampling and filtering to work

--- a/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
+++ b/hackathon/profundo/data_processing/02_prep_SWC_for_img_generator.ipynb
@@ -37,31 +37,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we check to see if the branch is at least as big as the target volume before we sample nodes from it."
+    "we check to see if the branch is at least as big as the target volume before we sample nodes from it.\n",
+    "\n",
+    "I tried minimum dimension cut-off of 25, but no branches met that criteria."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "join() argument must be str or bytes, not 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-f8950f99d14e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfnames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;31m# upsample the SWC\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mupsampled_fpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresample_swc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfnames\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mabs_paths\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/bin/vaa3d_tools/hackathon/profundo/data_processing/swc_io.py\u001b[0m in \u001b[0;36mresample_swc\u001b[0;34m(input_fname, input_fpath, output_dir)\u001b[0m\n\u001b[1;32m    109\u001b[0m         \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 111\u001b[0;31m     \u001b[0moutfile_fpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_fname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    112\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m     \u001b[0;31m# https://stackoverflow.com/a/4376421/4212158\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/bin/anaconda3/lib/python3.6/posixpath.py\u001b[0m in \u001b[0;36mjoin\u001b[0;34m(a, *p)\u001b[0m\n\u001b[1;32m     92\u001b[0m                 \u001b[0mpath\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0msep\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mTypeError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBytesWarning\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 94\u001b[0;31m         \u001b[0mgenericpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_arg_types\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'join'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     95\u001b[0m         \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/bin/anaconda3/lib/python3.6/genericpath.py\u001b[0m in \u001b[0;36m_check_arg_types\u001b[0;34m(funcname, *args)\u001b[0m\n\u001b[1;32m    147\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m             raise TypeError('%s() argument must be str or bytes, not %r' %\n\u001b[0;32m--> 149\u001b[0;31m                             (funcname, s.__class__.__name__)) from None\n\u001b[0m\u001b[1;32m    150\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhasstr\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mhasbytes\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    151\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Can't mix strings and bytes in path components\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: join() argument must be str or bytes, not 'list'"
+     ]
+    }
+   ],
    "source": [
     "from swc_io import get_fnames_and_abspath_from_dir, swc_to_dframe, resample_swc, dframe_to_swc\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "TARGET_DIM_SIZE = 25  # size in pixels for all x,y,z dims\n",
-    "half_size = TARGET_DIM_SIZE / 2\n",
-    "min_swc_dim_span = TARGET_DIM_SIZE + 5  # some leeway to make things easy\n",
-    "padding = min_swc_dim_span//2\n",
     "\n",
     "BRANCHES_DIR = \"../data/03_human_branches_splitted\"\n",
     "UPSAMPLED_BRANCHES_DIR = \"../data/04_human_branches_filtered_upsampled\"\n",
     "\n",
     "fnames, abs_paths = get_fnames_and_abspath_from_dir(BRANCHES_DIR)\n",
-    "good_swc_paths = []\n",
-    "good_swcs = {}\n",
-    "for i len(fnames):\n",
+    "total_dim = 0\n",
+    "for i in range(len(fnames)):\n",
+    "    # upsample the SWC\n",
+    "    upsampled_fpath = resample_swc(fnames, abs_paths[i])\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tested size 25, but no branches met this criteria\n",
+    "TARGET_DIM_SIZE = 10.  # size in pixels for all x,y,z dims\n",
+    "half_size = TARGET_DIM_SIZE / 2\n",
+    "#min_swc_dim_span = TARGET_DIM_SIZE + 5  # some leeway to make things easy\n",
+    "padding = TARGET_DIM_SIZE//2\n",
+    "\n",
+    "print(\"filtering branches that have any dimension smaller than \", TARGET_DIM_SIZE)\n",
+    "\n",
+    "fnames, abs_paths = get_fnames_and_abspath_from_dir(UPSAMPLED_BRANCHES_DIR)\n",
+    "total_dim = 0\n",
+    "for i in range(len(fnames)):\n",
+    "    \n",
+    "        # replace nodes with our upsampled nodes\n",
+    "        nodes = swc_to_dframe(upsampled_fpath)\n",
+    "    \n",
+    "    if i % 1000 == 0 and i != 0: print(\"testing branch #\", i, \"avg span: \", total_dim/i/3)\n",
     "    nodes = swc_to_dframe(abs_paths[i])\n",
     "    assert(isinstance(nodes, pd.DataFrame))\n",
     "    \n",
@@ -69,17 +108,17 @@
     "    y_span = nodes.y.max() - nodes.y.min()\n",
     "    z_span = nodes.z.max() - nodes.z.min()\n",
     "    \n",
-    "    dim_size_good = np.array([x_span, y_span, z_span]) > min_swc_dim_span\n",
+    "    total_dim = total_dim + x_span + y_span + z_span\n",
+    "    \n",
+    "    dim_size_good = np.array([x_span, y_span, z_span]) > TARGET_DIM_SIZE\n",
+    "    if z_span > TARGET_DIM_SIZE:   print(\"found z bigger than {}: {}\".format(int(TARGET_DIM_SIZE), z_span))\n",
     "    if np.all(dim_size_good):  # our SWC meets our criteria\n",
+    "        print(\"{} is big enough\".format(i))\n",
     "        \n",
     "        # upsample the SWC\n",
     "        upsampled_fpath = resample_swc(fnames, abs_paths[i])\n",
     "        # replace nodes with our upsampled nodes\n",
     "        nodes = swc_to_dframe(upsampled_fpath)\n",
-    "        \n",
-    "        # keep list TODO necessary?\n",
-    "        good_swc_paths.append(abs_paths[i])\n",
-    "        good_swcs[abs_paths[i]] = nodes\n",
     "        \n",
     "        # find nodes far enough away from bounds\n",
     "        central_nodes = nodes.loc[(nodes.x.between(nodes.x.min()+padding,nodes.x.max()+padding)) &\n",
@@ -88,15 +127,16 @@
     "        \n",
     "        if len(central_nodes) > 0:\n",
     "            # sample a central node\n",
-    "            center_node = good_nodes.sample(n=1)\n",
+    "            center_node = central_nodes.sample(n=1)\n",
     "            # grab all nodes in neighborhood of center_node\n",
     "            sample = nodes.loc[(nodes.x.between(center_node.x.item()-half_size, center_node.x.item()+half_size)) &\n",
     "                              (nodes.y.between(center_node.y.item()-half_size, center_node.y.item()+half_size)) &\n",
     "                              (nodes.z.between(center_node.z.item()-half_size, center_node.z.item()+half_size))]\n",
     "            \n",
     "            # save sample to swc\n",
+    "            print(\"saving \", fnames[i])\n",
     "            dframe_to_swc(fnames[i], sample)\n",
-    "    else:\n",
+    "    else:  # SWC does not have large enough dims\n",
     "        #print(\"dims too small \", x_span, y_span, z_span) \n",
     "        pass\n",
     "    \n",
